# Healthcare-Chatbot

.specify/memory/: constitution.md
Documents/mybook/: .gitignore
Documents/mybook/.specify/memory/: constitution.md
Documents/mybook/.specify/templates/: plan-template.md  tasks-template.md
Documents/mybook/backend/: .env.example  AUTHENTICATION_SETUP.md  alembic.ini  ingest.py  pyproject.toml
Documents/mybook/backend/migrations/: env.py  script.py.mako
Documents/mybook/backend/src/: __init__.py
Documents/mybook/backend/src/middleware/: auth.py  errors.py  rate_limit.py
Documents/mybook/backend/src/models/: __init__.py  session.py  user.py
Documents/mybook/backend/src/schemas/: auth.py
Documents/mybook/frontend/: .env
Documents/mybook/history/prompts/001-docusaurus-scaffold/: 0001-specify-docusaurus-scaffolding.spec.prompt.md  0002-plan-docusaurus-scaffolding.plan.prompt.md  0003-generate-docusaurus-scaffold-tasks.tasks.prompt.md  0004-implement-docusaurus-scaffolding-and-content.green.prompt.md
Documents/mybook/specs/001-docusaurus-scaffold/: plan.md  quickstart.md  research.md  spec.md  tasks.md
Documents/mybook/specs/005-auth-personalized-learning/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
frontened/healthcare-chatbot/: package-lock.json  package.json
frontened/healthcare-chatbot/app/: animations.css  page.tsx
history/prompts/constitution/: 1-initial-claude-code-constitution.constitution.prompt.md  2-update-project-name-in-constitution.constitution.prompt.md
(+9 files in other folders)
